# codeforge

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_phase5_initial_schema.py  0002_agent_intelligence.py  0003_task_pr_url.py  0004_project_context_doc.py  0005_teams_foundation.py  0006_story_linked_projects.py  0007_team_documents.py  0008_demand_generation_fields.py  0009_project_analysis_error.py  0010_story_technical_references.py  0011_create_repositories.py  0012_story_project_and_repositories.py  0013_project_repository_refactor.py  0014_team_document_linked_repository.py
docs/: PROMPT_ROADMAP.md  github_app_setup.md  phases.md  product.md  product_scope.md  product_vision.md  roadmap.md
src/codeforge/api/: app.py  dependencies.py
src/codeforge/cli/: config.py  main.py  output.py
tests/: conftest.py
tests/integration/: test_cli_commands.py
tests/integration/api/: test_routes.py
tests/integration/infrastructure/: test_agent_intelligence_repositories.py  test_sqlalchemy_repositories.py
tests/unit/api/: test_ai_api.py  test_demands_api.py  test_projects_analysis.py  test_projects_api.py  test_repositories_api.py  test_settings_api.py  test_stories_api.py  test_team_documents_api.py  test_teams_api.py
tests/unit/application/: test_analyze_breakdown_e2e.py  test_build_pipeline.py  test_error_classifier.py  test_execute_subtasks.py  test_prompt_builder.py  test_prompt_builder_v2.py  test_push_task_to_github.py  test_qa_loop.py  test_run_agent_session.py  test_run_breakdown.py  test_run_code_review.py  (+5 more)
(+160 files in other folders)
