[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeforge"
version = "0.1.0"
description = "AI coding automation platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "litellm>=1.50",
    "typer>=0.12",
    "rich>=13.8",
    "httpx>=0.27",
    "gitpython>=3.1",
    "toml>=0.10",
    "loguru>=0.7",
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.12",
]

[project.scripts]
codeforge = "codeforge.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codeforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "N818"]
